# rust_chess_engine

./: Cargo.toml  README.md  build.rs
assets/branding/: gen.py  nodetree.nodetree  start.nodetree
assets/sprites/: crop.py
src/: lib.rs  main.rs
src/bevy_app/: chess_engine_glue.rs  mod.rs
src/chess_engine/: mod.rs
src/chess_engine/actions/: mod.rs
src/chess_engine/board/: bitmap.rs  board.rs  board_position.rs  file.rs  mod.rs  rank.rs
src/chess_engine/board/actions/: mod.rs
src/chess_engine/errors/: mod.rs
src/chess_engine/history/: mod.rs
src/chess_engine/pieces/: bishop.rs  king.rs  knight.rs  mod.rs  pawn.rs  queen.rs  rook.rs
tests/: boardtest.rs
