[package]
name = "rusttesting"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.bevy]
version = "0.11"
# Disable the default features if there are any that you do not want
features = ["bevy_ui", "bevy_text", "bevy_sprite"]
