[package]
name = "rusttesting"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_mod_picking = "0.15.0"
bevy_sprite_animation = "0.4.0"
serde = { version = "1.0.188", features = ["derive"] }

[dependencies.bevy]
version = "0.11"
# Disable the default features if there are any that you do not want
features = ["bevy_ui", "bevy_text", "bevy_sprite"]



